--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,7 @@
 install:
   - ps: nuget restore OpenConsole.sln
   
+build:
+  parallel: true                  # enable MSBuild parallel builds
+  project: OpenConsole.sln      # path to Visual Studio solution or project
+  
